src/test_compilateur/tst/ok/multi_sum.c
int main() {
  int a = 3;
  int b = 5;
  int sum=0;
  int i=1;
  for(i=1 ; i<b ; i++){
    sum+=a;
  }
  return 0;
}
