src/test_compilateur/tst/error/for_wrong.c
int main(int argc) {
    int i;
    for(i=0,i<argc,i++)
      i++;
    return 0;
}
